Fixed spacing in card view and added new CSS.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,6 @@ nav {
     color: white;
     padding: 5px 25px;
     border-radius: 15px;
-    height: 50px;
 }
 
 .secondary-link {
@@ -100,7 +99,7 @@ nav {
 }
 
 .flat-bottom-card {
-    padding: 30px 30px 30px 30px;
+    padding: 30px 30px 0px 30px;
 }
 
 .flat-top-card {
@@ -113,11 +112,16 @@ nav {
     padding: 30px;
 }
 
+.card-item {
+    display: inline-block;
+    margin-bottom: 30px;
+}
+
 h1 {
     font-family: 'Roboto';
     font-weight: 900;
     font-style: italic;
-    margin:0 0 10px 0;
+    margin:0 0 15px 0;
 }
 
 h2 {
@@ -141,10 +145,6 @@ h4 {
     color: #4C4C4C;
 }
 
-.attribute-list {
-    padding-bottom: 30px;
-}
-
 .attribute {
     font-family: 'Roboto';
     font-weight: 300;
@@ -155,6 +155,10 @@ h4 {
 .permitted {
     color: #009912;
     font-weight: 400;
+}
+
+.attribute-list {
+    display: block;
 }
 
 .attribute-icon {
